--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 			<version>2.11.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>logging-interceptor</artifactId>
+			<version>4.9.1</version>
+		</dependency>
+
 		<!-- Retrofit Gson Converter -->
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
